# fb_vs_ab_KDE

./: .gitignore  Makefile  README.md  README.src.md  main.py  pyproject.toml  references.bib  requirements.txt
report/templates/: base.html  template.html
scripts/: _plot_helpers.py  build_report.py  config.py  fig_silverman_bounds.py  kde_estimator.py  max_kde_diffs.md  preprocess.py  reference_distribution.py  run_analysis.py  synthetic_test.py  utils.py
scripts/superseded/: preprocess_oob.py
