[project]
name = "fb-vs-ab-kde"
version = "0.1.0"
description = "Fixed-bandwidth vs. adaptive-bandwidth KDE for flow duration curve estimation across large streamflow datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.9.0",
    "diptest>=0.11.0",
    "geopandas>=1.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "pyarrow>=16.0.0",
    "scipy>=1.17.1",
    "selenium>=4.43.0",
    "xarray>=2026.4.0",
]
